💄 Fix logo alignment for large screen

--- a/src/app/components/common/header/header.component.sass
+++ b/src/app/components/common/header/header.component.sass
@@ -46,3 +46,8 @@
             .logo
                 font-size: 2rem
                 font-style: italic
+
+            .login
+                width: 89px
+                text-align: center
+                padding: 10px 0
